# fpga-sha3-hardware-impl

./: .gitignore  BUILD.md  CMakeLists.txt  COPILOT.md  LICENSE  README.md  SYNTHESIS.md  run_synth.sh  synth_ooc.tcl
examples/keccak-c-impl/: Keccak-compat-test.c  Keccak-readable-and-compact.c  Makefile
rtl/: f_permutation.sv  keccak.sv  padder.sv  padder_deprecated.sv  rconst_lut.sv  round.sv  sha3_pkg.sv  sha3_shift.sv
rtl/wb/: README.md  sha3-wb.sv  sha3_wb_top.sv
tests/: CMakeLists.txt  TEST_SUITE.md  f_permutation_test_vectors.h  padder_test_vectors.h  round_test_vectors.h  sha3_nist_vectors.h  tb_f_permutation.cpp  tb_keccak.cpp  tb_padder.cpp  tb_rconst_lut.cpp  tb_round.cpp  tb_round_abc.cpp  tb_sha3_shift.cpp  tb_sha3_wb.cpp  tb_sha3_wb_top.cpp
utils/: generate_sha3_nist_vectors.py
utils/sha-3-python/: abc_trace.txt  generate_f_permutation_vectors.py  generate_padder_vectors.py  generate_round_vectors.py  generate_sha3_nist_vectors.py  pad10star1.py  sha3-tests.py  sha3.py  trace_abc.py
